# passpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.libcotp.macOS.txt  CMakeLists.sqlite3.macOS.txt  CMakeLists.sqlite3.txt  CMakeLists.txt  README.md  build.sh
src/: build.txt  crypt.cpp  main.cpp  main2.cpp
